Director Actions API Endpoint
The report generation endpoint has been created and is now capable of generating a report.
The report is generated based of a template which can be changed.
