# backend/backend/api/Views/Publications.py
@@ -1,4 +1,5 @@
 from email.policy import HTTP
+from matplotlib.pyplot import title
 from requests import delete
 from rest_framework.views import APIView
 from rest_framework.response import Response
@@ -18,6 +19,7 @@ serilaizerTypes = {'conference': conferneceserializer, 'journal':journalserializ
                    'book_chapters': bookchapterserializer, 'book_editor': bookeditorserializer}
 
 
+
 class PublicationsSingleGetApiView(APIView):
     # add permission to check if user is authenticated
     permission_classes = [permissions.IsAuthenticated]
@@ -26,13 +28,18 @@ class PublicationsSingleGetApiView(APIView):
     def get(self, request, Emp_ID, Type, startDate, endDate, *args, **kwargs):
         ''' List text for given requested user. '''
         
-        queryData = (model[Type].objects.filter(Emp_ID=Emp_ID, 
-                                               Conference_startdate__gt=startDate, 
-                                               Conference_startdate__lte=endDate) | 
-                     model[Type].objects.filter(Emp_ID=Emp_ID, 
-                                               Conference_startdate__lte=startDate, 
-                                               Conference_enddate__gte=startDate))
-        
+        if Type == 'conference':
+            queryData = (model[Type].objects.filter(Emp_ID=Emp_ID, 
+                                                Conference_startdate__gt=startDate, 
+                                                Conference_startdate__lte=endDate) | 
+                        model[Type].objects.filter(Emp_ID=Emp_ID, 
+                                                Conference_startdate__lte=startDate, 
+                                                Conference_enddate__gte=startDate))
+        else:
+            queryData = model[Type].objects.filter(Emp_ID=Emp_ID,
+                                                   year__gte=startDate.year,
+                                                   year__lte=endDate.year)
+
         
         if queryData.exists():
             serializer = serilaizerTypes[Type](queryData, many=True)
@@ -52,7 +59,7 @@ class PublicationsSinglePutApiView(APIView):
         ''' Create/Update the record with given data. '''
         
         data = request.data
-        queryData = model[Type].objects.filter(Emp_ID=Emp_ID, DOI=data['DOI'])
+        queryData = model[Type].objects.filter(Emp_ID=Emp_ID, title=data['title'])
         if queryData.exists():
             data.pop('Type', None)
             serializer = serilaizerTypes[Type](queryData[0], data=data, partial=True)
@@ -77,13 +84,19 @@ class PublicationsAllApiView(APIView):
     # 1. List all
     def get(self, request, Type, startDate, endDate, *args, **kwargs):
         ''' Get all records. '''
-        
-        queryData = (model[Type].objects.filter(Conference_startdate__gt=startDate, 
+       
+        if Type == 'conference':
+            queryData = (model[Type].objects.filter( 
+                                                Conference_startdate__gt=startDate, 
                                                 Conference_startdate__lte=endDate) | 
-                     model[Type].objects.filter(Conference_startdate__lte=startDate, 
+                        model[Type].objects.filter( 
+                                                Conference_startdate__lte=startDate, 
                                                 Conference_enddate__gte=startDate))
-        
-        
+        else:
+            queryData = model[Type].objects.filter(
+                                                   year__gte=startDate.year,
+                                                   year__lte=endDate.year)
+            
         if queryData.exists():
             serializer = serilaizerTypes[Type](queryData, many=True)
             return Response(serializer.data, status=status.HTTP_200_OK)
